@@ -43,6 +43,7 @@ Fixed
   the tab it belongs to.
 - Fixed crash when downloading a file without any path information (e.g a
   magnet link).
+- Fixed crashes when opening an empty URL (e.g. via pasting).
 
 v0.5.1
 ------
